--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul><li>Developed multiple web applications using HTML, CSS, JavaScript, jQuery, and React JS.</li>
         <li>Effectively diagnosed and resolved technical issues, ensuring smooth operation of web applications</li>
     </ul>
-    <li><h3>IBM-data visulization usin python</h3></li>
+    <li><h3>IBM-data visulization using python</h3></li>
     <ul>
         <li> Proficient in Matplotlib, Seaborn, Plotly, and Bokeh libraries</li>
         <li>Skilled in data manipulation using Pandas and NumPy</li>
